--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section class="lead">
       <h2 class="lead__title">Путешествия по России</h2>
       <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-      <div><img class="lead__image" alt="Фото плацкарта" src="./images/lead-polka.jpg"></div>
+      <img class="lead__image" alt="Фото плацкарта" src="./images/lead-polka.jpg">
       <p class="lead__caption">Ваша полка - верхняя</p>
     </section>
     <section class="intro">
@@ -59,7 +59,7 @@
       <div class="place">
         <h2 class="place__title">Куршская коса</h2>
         <div class="website">
-          <h3 class="website__url-heading">URL</h3>
+          <p class="website__url-heading">URL</p>
           <a href="http://park-kosa.ru" class="website__link">park-kosa.ru</a>
         </div>
         <img class="place__image" src="./images/place-kosa.jpg" alt="Фото Куршской косы">
@@ -75,7 +75,7 @@
       <div class="place">
         <h2 class="place__title">Кольский</h2>
         <div class="website">
-          <h3 class="website__url-heading">URL</h3>
+          <p class="website__url-heading">URL</p>
           <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="website__link">National Geographic</a>
         </div>
         <img class="place__image" src="./images/place-kolsky.jpg" alt="Фото Кольского">
@@ -84,14 +84,14 @@
             тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
           <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля 
             в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний 
-            об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом
-            в Мурманск.</p>
-          </div>
+            об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. 
+            Но ваша мечта увидеть северное сияние начинает сбываться с билетом в Мурманск.</p>
+        </div>
       </div>
       <div class="place">
         <h2 class="place__title">Алтай</h2>
         <div class="website">
-          <h3 class="website__url-heading">URL</h3>
+          <p class="website__url-heading">URL</p>
           <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="website__link">Facebook</a>
         </div>
         <img class="place__image" src="./images/place-altai.jpg" alt="Фото Алтай">
@@ -107,7 +107,7 @@
       <div class="place">
         <h2 class="place__title">Зимний Байкал</h2>
         <div class="website">
-          <h3 class="website__url-heading">URL</h3>
+          <p class="website__url-heading">URL</p>
           <a href="https://vk.com/baikalmile" class="website__link">https://vk.com/baikalmile</a>
         </div>
         <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Фото зимнего Байкала">
@@ -123,14 +123,15 @@
       <div class="place">
         <h2 class="place__title">Карелия</h2>
         <div class="website">
-          <h3 class="website__url-heading">URL</h3>
+          <p class="website__url-heading">URL</p>
           <a href="http://vodlozero.ru" class="website__link">http://vodlozero.ru</a>
         </div>
         <img class="place__image" src="./images/place-karelia.jpg" alt="Фото Карелии">
-        <div class="place__paragraphs"><p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. 
-          Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам 
-          уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню 
-          километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p></div>
+        <p class="place__paragraphs">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница 
+          не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда 
+          не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
+          В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. 
+          Чтобы все знали, кто тут хозяин.</p>
       </div>
     </section>
     <section class="cover">
@@ -141,13 +142,13 @@
     </section>
   </main>
   <footer class="footer">
-    <ul class="footer__links">
+    <nav><ul class="footer__links">
       <li class="footer__list-item"><a href="https://yandex.ru/maps" class="footer__link">Карты</a></li>
       <li class="footer__list-item"><a href="https://yandex.ru/pogoda" class="footer__link">Погода</a></li>
       <li class="footer__list-item"><a href="https://rasp.yandex.ru" class="footer__link">Расписание</a></li>
       <li class="footer__list-item"><a href="https://calendar.yandex.ru" class="footer__link">Календарь</a></li>
       <li class="footer__list-item"><a href="https://travel.yandex.ru" class="footer__link">Путешествия</a></li>
-    </ul>
+    </ul></nav>
     <p class="footer__copyright">&copy; 2022 Маргарита Алексеева</p>
   </footer>
 </body>
