второй спринт на третье ревью

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <img alt="Логотип Россия" class="header__logo" src="./blocks/header/__logo/header-logo.svg">
     <div class="header__links">
       <a href="#" class="header__link header__link_active">Ru</a>
-      <a href="#" class="header__link header__link_active">En</a>
+      <a href="#" class="header__link">En</a>
     </div>
   </header>
   <main class="content">
@@ -43,18 +43,18 @@
     </section>
     <section>
       <ul class="photo-grid">
-        <li><img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Фото вида из поезда" data-type="auto"></li>
-        <li><img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Фото гор" data-type="auto"></li>
-        <li><img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="Фото тумана в поле" data-type="auto"></li>
-        <li><img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="Фото тумана в лесу" data-type="auto"></li>
-        <li><img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="Фото льда на Байкале" data-type="auto"></li>
-        <li><img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="Фото Байкала" data-type="auto"></li>
-        <li><img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="Фото Эльбруса" data-type="auto"></li>
-        <li><img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="Фото берега" data-type="auto"></li>
-        <li><img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="Фото Камчатки" data-type="auto"></li>
-        <li><img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="Фото гор Камчатки" data-type="auto"></li>
-        <li><img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="Фото скал Байкала" data-type="auto"></li>
-        <li><img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Фото тумана в горах" data-type="auto"></li>
+        <li><img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Фото вида из поезда"></li>
+        <li><img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Фото гор"></li>
+        <li><img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="Фото тумана в поле"></li>
+        <li><img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="Фото тумана в лесу"></li>
+        <li><img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="Фото льда на Байкале"></li>
+        <li><img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="Фото Байкала"></li>
+        <li><img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="Фото Эльбруса"></li>
+        <li><img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="Фото берега"></li>
+        <li><img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="Фото Камчатки"></li>
+        <li><img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="Фото гор Камчатки"></li>
+        <li><img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="Фото скал Байкала"></li>
+        <li><img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Фото тумана в горах"></li>
       </ul>
     </section>
     <section class="places">
